# StrideHive

./: README.md
mcp-server/: README.md  pyproject.toml
mcp-server/src/stridehive/: __init__.py  server.py
mcp-server/src/stridehive/data/: __init__.py  mock.py
mcp-server/src/stridehive/tools/: __init__.py  health.py  sessions.py  trends.py
