[project]
name = "stridehive-mcp"
version = "0.1.0"
description = "StrideHive MCP Server - Health and fitness data tools for Claude"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.27.0",
]

[project.scripts]
stridehive = "stridehive.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stridehive"]
